<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical"
    tools:context="org.d3ifcool.nhernak.activity.LoginActivity">

    <ImageView
        android:contentDescription="@string/logo_nhernak"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:src="@drawable/logo"
        android:layout_gravity="center"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_nhernak"
            android:gravity="center"
            style="@style/Base.TextAppearance.AppCompat.Large" />
        <EditText
            android:id="@+id/userEmailLogin"
            android:inputType="textEmailAddress"
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"/>
        <EditText
            android:id="@+id/userPasswordLogin"
            android:inputType="textPassword"
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"/>
        <Button
            android:id="@+id/btn_login"
            android:layout_marginTop="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login" />
        <TextView
            android:textSize="12sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or"/>
        <com.google.android.gms.common.SignInButton
            android:id="@+id/signin_google_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <com.facebook.login.widget.LoginButton
            android:id="@+id/signin_facebook_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <LinearLayout
            android:layout_marginTop="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/do_not_have_acc"
                android:layout_marginRight="5dp"
                android:layout_marginEnd="5dp"/>
            <TextView
                android:id="@+id/registerText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/click_here"
                android:textColor="@color/colorPrimaryDark"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
