<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="16dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.d3ifcool.nhernak.activity.RegisterActivity">
    <ImageView
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:src="@drawable/logo"
        android:layout_gravity="center"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register_nhernak"
            android:gravity="center"
            style="@style/Base.TextAppearance.AppCompat.Large" />
        <EditText
            android:id="@+id/userEmailRegister"
            android:inputType="textEmailAddress"
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"/>
        <EditText
            android:id="@+id/userPasswordRegister"
            android:inputType="textPassword"
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"/>
        <Button
            android:id="@+id/btn_register"
            android:layout_marginTop="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"/>
        <TextView
            android:textSize="12sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or"/>
        <com.google.android.gms.common.SignInButton
            android:id="@+id/signin_google"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <com.facebook.login.widget.LoginButton
            android:id="@+id/signin_facebook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <LinearLayout
            android:layout_marginTop="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/click_here_to"
                android:layout_marginRight="5dp"
                android:layout_marginEnd="5dp" />
            <TextView
                android:id="@+id/loginText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textColor="@color/colorPrimaryDark"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
