<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="org.d3ifcool.demonav.Activity.DetailFarmAnimalActivity"
        android:padding="16dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/detail_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/garut_sheep"
            android:textSize="20sp"
            android:gravity="center" />
        <ImageView
            android:id="@+id/detail_img"
            android:layout_width="300dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            tools:src=""
            android:layout_margin="16dp"
            android:contentDescription="@string/imgDesc_animal" />
        <TextView
            android:id="@+id/detail_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@string/cooming_soon"/>
    </LinearLayout>
</ScrollView>