<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.d3ifcool.nhernak.activity.MarketPriceActivity"
    android:orientation="vertical"
    android:padding="16dp">
    <LinearLayout
        android:id="@+id/ayam"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">
        <ImageView
            android:src="@drawable/ic_chicken"
            android:layout_width="80px"
            android:layout_height="80px"
            android:layout_marginRight="10dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cemani_chicken"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/domba"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">
        <ImageView
            android:src="@drawable/ic_sheep"
            android:layout_width="80px"
            android:layout_height="80px"
            android:layout_marginRight="10dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/garut_sheep"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/sapi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">
        <ImageView
            android:src="@drawable/ic_cow"
            android:layout_width="80px"
            android:layout_height="80px"
            android:layout_marginRight="10dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/limosin_cow"/>
    </LinearLayout>

</LinearLayout>
