<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent">
<LinearLayout

    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:id="@+id/layout_top"
        android:layout_width="match_parent"
        android:layout_height="200dp">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <org.d3ifcool.nhernak.slider.SliderView
                android:id="@+id/sliderView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        </FrameLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_indicator"/>

        <LinearLayout
            android:id="@+id/pagesContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_gravity="bottom"
            android:layout_marginBottom="8dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/menu_contact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#fafafa"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingBottom="10dp"
            android:paddingEnd="16dp"
            android:paddingStart="16dp"
            android:paddingTop="10dp">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/ic_menu_consultant"
                android:contentDescription="@string/desc" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:text="@string/contact_consultant"
                    android:textSize="25sp"
                    android:layout_marginStart="20dp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/menu_animal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:background="#fafafa"
            android:gravity="center">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/ic_menu_farmanimal"
                android:contentDescription="@string/desc" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="5dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/farm_animal"
                    android:layout_marginLeft="20dp"
                    android:textSize="25sp"
                    android:layout_marginStart="20dp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/menu_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:background="#fafafa"
            android:gravity="center">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/ic_menu_price"
                android:contentDescription="@string/desc" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="5dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/market_price"
                    android:layout_marginLeft="20dp"
                    android:textSize="25sp"
                    android:layout_marginStart="20dp" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
</ScrollView>