<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="216dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:background="@color/colorPrimary">

        <ImageView
            android:id="@+id/image_profile"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="8dp"
            tools:src="@drawable/ic_profilemanblueyoung"
            android:contentDescription="@string/desc" />

        <TextView
            android:id="@+id/name_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textSize="21sp"
            android:textColor="@color/white"
            tools:text="Robert Downey Jr" />

        <TextView
            android:id="@+id/job_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="36dp"
            android:layout_marginTop="4dp"
            android:textSize="12sp"
            android:textColor="@color/white"
            tools:text="Peternak Domba Garut" />
    </LinearLayout>
    <Space
        android:layout_width="match_parent"
        android:layout_height="16dp"/>
    <RelativeLayout
        android:id="@+id/profile_address"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:minHeight="55dp"
        android:background="@color/white">
        <ImageView
            android:id="@+id/imgLoc"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:src="@drawable/ic_location"
            android:contentDescription="@string/imgDesc_users" />
        <TextView
            android:id="@+id/text_location"
            android:layout_toEndOf="@id/imgLoc"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            tools:text="Jl Cibaduyut Raya, GG TVRI 1"
            android:layout_toRightOf="@id/imgLoc" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textColor="@color/colorPrimary"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/arrow_right"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:textSize="30sp"
            tools:ignore="RelativeOverlap" />
    </RelativeLayout>
    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="#d4d4d7" />
    <RelativeLayout
        android:id="@+id/profile_number"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:minHeight="55dp"
        android:background="@color/white">
        <ImageView
            android:id="@+id/imgContact"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:src="@drawable/ic_phone"
            android:contentDescription="@string/desc" />
        <TextView
            android:id="@+id/text_contact"
            android:layout_toEndOf="@id/imgContact"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            tools:text="089675688630"
            android:layout_toRightOf="@id/imgContact" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textColor="@color/colorPrimary"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/arrow_right"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:textSize="30sp"
            tools:ignore="RelativeOverlap" />
    </RelativeLayout>
    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="#d4d4d7" />
    <RelativeLayout
        android:id="@+id/profile_email"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:minHeight="55dp"
        android:background="@color/white">
        <ImageView
            android:id="@+id/imgMail"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:src="@drawable/ic_mail"
            android:contentDescription="@string/desc" />
        <TextView
            android:id="@+id/text_email"
            android:layout_toEndOf="@id/imgMail"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            tools:text="robertdowney@jr.com"
            android:layout_toRightOf="@id/imgMail" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textColor="@color/colorPrimary"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:textSize="30sp"
            tools:ignore="RelativeOverlap" />
    </RelativeLayout>
    <Space
        android:layout_width="match_parent"
        android:layout_height="16dp"/>
    <LinearLayout
        android:id="@+id/profile_logout"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:minHeight="55dp"
        android:background="@color/white">
        <TextView
            android:textColor="#ce6c21"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:id="@+id/logout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/log_out" />
    </LinearLayout>
    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="#d4d4d7" />
    </LinearLayout>
</ScrollView>